Updated navbar to Bootstrap navbar with collapsable button. Fixed Kiki logo app to remove whitespace. Added Bootstrap JavaScript bundle for navbar collapsable functionality.

--- a/src/App.css
+++ b/src/App.css
@@ -11,22 +11,13 @@ body{
 :root {
 	--primary-color: white
 }
-.logo{
-	margin-left: 26%;
-	margin-top: 4px;
-	clear: both;
-	position: sticky;
-}
+
 ul {
 
 	list-style-type: none;
 	overflow: hidden;
-	margin-right: 10%;
 	font-family: 'Candal', sans-serif;
   }
-li{
-	margin-left: 2%;
-}  
 li a {
 	display: block;
 	color: white;
@@ -100,15 +91,24 @@ footer {
 	 margin: 10px;
 	;
   }
+
+/*********************************************************************
+************************** Bootstrap Overrides ***********************
+**********************************************************************/
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
+.navbar-dark .navbar-toggler {
+    color: white;
+    border-color: white;
+}
+
+/*********************************************************************
+***************************** Media Queries **************************
+**********************************************************************/
   @media screen and (max-width:1280px){
-	  .logo{
-		  z-index: -1;
-		  position: static;
-	}
 	ul{
-		/* margin-top:-20%; */
 		z-index: 1; 
-		margin-right:15%;
 	}
 	.graphiccontainer{	
 		width: 75%;	
@@ -138,7 +138,6 @@ footer {
 	}
 
   @media screen and (max-width: 992px) {
-	  .logo{margin-left: 2%;}
 	.graphic{
 		width: 75%;
 		margin: 10%;
@@ -167,3 +166,4 @@ footer {
 	  };
 
 	};
+
